2007-11-22  Jürg Billeter  <j@bitron.ch>

	* vala/valasemanticanalyzer.vala: add symbol dependency for generic
	  type arguments

	* gobject/valaccodegenerator.vala, gobject/valaccodegeneratorclass.vala,
	  gobject/valaccodegeneratormethod.vala: add type property for generic
	  type parameters, support typeof for type parameters

	* configure.ac: require glib 2.12 for g_value_get_gtype

2007-11-21  Jürg Billeter  <j@bitron.ch>

	* vapi/glib-2.0.vapi: add some more GObject functions

2007-11-21  Jürg Billeter  <j@bitron.ch>

	* vapi/glib-2.0.vapi: extend GValue, fix g_object_connect

2007-11-20  Jürg Billeter  <j@bitron.ch>

	* vapi/packages/gio-2.0/gio-2.0.metadata: add missing cheader_filename
	  attributes

	* vapi/gio-2.0.vapi: regenerated

2007-11-20  Jürg Billeter  <j@bitron.ch>

	* vapi/packages/gio-2.0/gio-2.0.gi: updated to gio 0.1.2

	* vapi/gio-2.0.vapi: regenerated

2007-11-20  Jürg Billeter  <j@bitron.ch>

	* vapigen/valagidlparser.vala: detect out parameters of value types, add
	  support for array return types

	* vapi/packages/gtk+-2.0/gtk+-2.0.metadata: set is_array for return
	  value of gtk_tree_path_get_indices

	* vapi/atk.vapi, vapi/gconf-2.0.vapi, vapi/gdk-2.0.vapi,
	  vapi/gio-2.0.vapi, vapi/gtk+-2.0.vapi, vapi/pango.vapi: regenerated

2007-11-16  Jürg Billeter  <j@bitron.ch>

	* tests/property-sample.vala: remove invalid property definitions

2007-11-13  Jürg Billeter  <j@bitron.ch>

	* vapi/packages/gconf-2.0/: update to use vala-gen-introspect

	* vapi/gconf-2.0.vapi: regenerated

2007-11-12  Jürg Billeter  <j@bitron.ch>

	* vapi/glib-2.0.vapi: add binding for g_type_qname and fix GQuark
	  binding

2007-11-11  Jürg Billeter  <j@bitron.ch>

	* vapi/glib-2.0.vapi: add bindings for g_object_get_data,
	  g_object_set_data, and g_type_query

2007-11-10  Jürg Billeter  <j@bitron.ch>

	* gobject/valaccodegenerator.vala,
	  gobject/valaccodegeneratormemberaccess.vala: fix code generation for
	  private fields in types not based on GTypeInstance
